# Heli

./: .gitignore  .gitmodules  :w  CMakeLists.txt  Makefile  README.md  main  main.cpp  run.sh
.cache/clangd/index/: _fixes.hpp.2DAF8181FC5F249E.idx  _vectorize.hpp.E0C84CDE65385C93.idx  camera.cpp.71B4B4B5FFF439E3.idx  camera.hpp.BB7F67C5E490DC58.idx  cocoa_init.m.6DB4F3CC497C7A50.idx  cocoa_joystick.h.FCDDFD3C648AC8E8.idx  cocoa_joystick.m.1018776B13354314.idx  cocoa_monitor.m.C4C2D86CE91F0CA8.idx  cocoa_platform.h.E488ED9EFE42B3A9.idx  cocoa_time.c.D288C37E592AFCBC.idx  cocoa_time.h.CE82ED14AB1235FD.idx  cocoa_window.m.9328E5B3AF717C75.idx  common.hpp.996819EB5F849B97.idx  compute_common.hpp.74AF8D458E167507.idx  compute_vector_decl.hpp.5ECDE8F847CC294A.idx  compute_vector_relational.hpp.FEDF2889A4F44A5D.idx  constants.hpp.1A7523B2E65392BD.idx  constants.inl.CF0ECA8552FCDCAE.idx  context.c.B8885C8222E754C3.idx  dual_quaternion.hpp.5CAE81B9FB2F9C0D.idx  dual_quaternion.inl.9A3D06213DB469BF.idx  egl_context.c.36122E9EED471558.idx  epsilon.hpp.82AF85CEAEFFF8E7.idx  epsilon.inl.96CDE213ED4B48C2.idx  exponential.hpp.87173BC4C02F2C4F.idx  func_common.inl.2B5758DCC8F92CB5.idx  func_exponential.inl.7642ECAD2B0029FA.idx  func_geometric.inl.2422C40D1C45DEAF.idx  func_integer.inl.AC55712EA368B4F7.idx  func_matrix.inl.A15F35558E5DB3EC.idx  func_packing.inl.8939F64E956E4A48.idx  func_trigonometric.inl.E9A4015115515DD5.idx  func_vector_relational.inl.C7A1DF79467514B8.idx  fwd.hpp.1D25A957719D45DC.idx  geometric.hpp.04DE52F8E160A126.idx  glad.c.04CCA9EC1E70CE3F.idx  glad.h.A160F5B2CF85E6EB.idx  glfw3.h.8BBFEF288EECB4C1.idx  glfw3native.h.2B018B1FBD7DF2D4.idx  glm.cpp.A2010D663CAC3E7C.idx  (+186 more)
App/: Makefile  main.cpp
App/ECS/: Component.hpp  Entity.hpp  Math.hpp  System.hpp
App/Scripts/: MovementSystem.hpp
Assets/Scripts/: MovementSystem.cpp  MovementSystem.hpp
Heli/: HeliCore.hpp
Heli/Core/: Component.hpp  ComponentManager.hpp  Entity.cpp  Entity.hpp  MemoryPool.hpp  System.cpp  System.hpp  TransformComponent.hpp
Heli/Core/Components/: PositionComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
Heli/Core/ECS/: ClassTypeId.hpp  Component.hpp  Entity.cpp  Entity.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
Heli/Core/Logger/: Debug.hpp  LogManager.cpp  LogManager.hpp
Heli/Core/Logging/: Debug.cpp
Heli/Core/Memory/: MemoryManager  MemoryManager.cpp  MemoryManager.hpp  MemoryPool.hpp  PoolManager.cpp  PoolManager.hpp
Heli/Core/Systems/: MovementSystem.hpp  RenderingSystem.hpp  ShitSystem.hpp  TransformSystem.hpp
assets/shaders/: test.glsl  triangle.frag  triangle.vert
heli/assets/shaders/: circle.glsl  grid.glsl  rectangle.glsl  sprite.glsl
heli/include/core/: colors.h  component.hpp  event.hpp  event_manager.h  game.hpp  game_object.hpp  transform.hpp
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
(+36 files in other folders)
